# image_description_service

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/v1/routes/: image_ocr.py  inference_file.py  inference_url.py  streaming.py
app/api/v1/schemas/: request.py  response.py
app/common/: errors.py  logger.py  startup.py
app/services/: clean_response_for_inferense.py  load_image.py  model_service.py  parse_html_text.py  translation_service.py
